distribution/istio-resources/kfserving-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kfserving-gateway
  namespace: kubeflow
spec:
  selector:
    istio: kfserving-ingressgateway
  servers:
  - hosts:
    - '*.serving.kftest.honestbank.com'
    port:
      name: http
      number: 80
      protocol: HTTP
    # Upgrade HTTP to HTTPS
    tls:
      httpsRedirect: true
  - hosts:
    - '*.serving.kftest.honestbank.com'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kubeflow-ingressgateway-certs
