distribution/istio-resources/gateway-authorizationpolicy-serving.yaml
# Allow all traffic to the istio-ingressgateway
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway-serving
  namespace: istio-system
spec:
  action: ALLOW
  selector:
    # Same as the istio-ingressgateway Service selector
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  rules:
  - to:
    - operation:
        hosts:
        - serving.kftest.honestbank.com
        - '*.serving.kftest.honestbank.com'
